# black-scholes-fdm

./: CMakeLists.txt  README.md
include/: bs.hpp
python_bindings/: bindings.cpp
src/: bs.cpp  main.cpp
